<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="night_theme">Темная тема</string>
    <string name="give_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agree">Пользовательское соглашение</string>

    <string name="text_SettingsActivity">Нажали на кнопку Настройки</string>
    <string name="text_SearchActivity">Нажали на кнопку Поиск</string>
    <string name="text_MediaActivity">Нажали на кнопку Медиатека</string>


    <string name="settingsShare_Text">https://practicum.yandex.ru/android-developer/</string>
    <string name="supportHelpTheme_text">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="supportHelpBodyLetter_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="myEmail">shkanovaviktoria@mail.ru</string>
    <string name="offerYandex">https://yandex.ru/legal/practicum_offer/</string>

    <string name="smels">Smells Like Teen Spirit</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="no_internet">
        Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету
    </string>
    <string name="update">Обновить</string>

    <string name="historyTitle">Вы искали</string>
    <string name="historyBtn">Очистить историю</string>
    <string name="time">00:00</string>

    <string name="favTracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>

    <string name="playlist_created_message">Плейлист %s создан</string>
    <string name="playlist_creation_error">Ошибка при создании плейлиста</string>

    <plurals name="howManyTracks" tools:ignore="MissingQuantity">
        <item quantity="one">%d трек</item>
        <item quantity="two">%d трека</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

    <plurals name="howManyMinutes" tools:ignore="MissingQuantity">
        <item quantity="one">%d минута</item>
        <item quantity="two">%d минуты</item>
        <item quantity="few">%d минут</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>

    <string name="share_playlist_title">Поделиться плейлистом</string>
    <string name="empty_playlist_message">Нельзя поделиться пустым плейлистом</string>

    <string name="refactor">Редактировать</string>
</resources>