<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:theme="@style/Theme.MyApp.White">


    <Toolbar
        android:id="@+id/backToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin56"

        android:title="@string/settings"
        style="@style/ToolbarStyle" />


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchTheme"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_gravity="end"

            android:text="@string/night_theme"

            style="@style/SettingsButtonStyle"/>

    <Button
        android:id="@+id/btnShareApp"

        style="@style/SettingsButtonStyle"

        android:layout_width="match_parent"
        android:layout_height="@dimen/margin61"
        android:layout_weight="0"

        android:text="@string/give_app"
        app:icon="@drawable/share" />

    <Button
        android:id="@+id/btnSupportHelp"

        style="@style/SettingsButtonStyle"

        android:layout_width="match_parent"
        android:layout_height="@dimen/margin61"
        android:layout_weight="0"

        android:text="@string/support"
        app:icon="@drawable/support" />

    <Button
        android:id="@+id/btnUserAgree"

        style="@style/SettingsButtonStyle"

        android:layout_width="match_parent"
        android:layout_height="@dimen/margin61"
        android:layout_weight="0"

        android:text="@string/user_agree"
        app:icon="@drawable/user_agree" />


</LinearLayout>